...
                  ),
                  Expanded(
                    child: Center(
                      child: Text(
                        widget.edit != null
                            ? 'Modifier la transaction'
                            : 'Nouvelle transaction',
                        style: const TextStyle(
                          fontSize: 20,
                          fontWeight: FontWeight.w700,
                          fontFamily: 'Inter',
                        ),
                      ),
...
                    ),
                  ),
                  const SizedBox(width: 10),
                  Expanded(
                    flex: 2,
                    child: AppButton(
                      label: 'Enregistrer',
                      primary: true,
                      small: true,
                      loading: _saving,
                      onPressed: _save,
                    ),
                  ),
...
