...
              AppCard(
                margin: const EdgeInsets.only(bottom: 20),
                child: Column(
                  crossAxisAlignment: CrossAxisAlignment.start,
                  children: [
                    SectionTitle(
                      'Répartition des dépenses',
                      link: 'Voir tout',
                      onLink: () => context.go(Routes.transactions),
                    ),
                    const SizedBox(height: 16),
                    const _DonutChart(),
                  ],
...
